Implementented spring security based on JWT, made changes to custom exceptions and their handling. Split team service into two separate services based on their business logic (Better readability)
